PROD-12-18-19/force-app/main/default/objects/Campaign/fields/BPC_Name__c.field-meta.xml
<CustomField>
    <fullName>BPC_Name__c</fullName>
    <formula>IF(ISPICKVAL(Room_Type__c,&quot;Prospect Specific&quot;),Account__r.Name&amp;&quot;-Account Campaign&quot;,
IF(ISPICKVAL(Room_Type__c,&quot;Sleeve&quot;),Sleeve__r.Name&amp;&quot;-Sleeve Campaign&quot;,
IF(ISPICKVAL(Room_Type__c,&quot;Fund&quot;),Investment_Vehicle__r.Name&amp;&quot;-Fund Campaign&quot;,&quot; &quot;)))</formula>
    <label>BPC Name</label>
    <type>Text</type>
</CustomField>