PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <formula>Original_Deal_Opportunity__r.Deal_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Number</label>
    <type>Text</type>
</CustomField>