PROD-12-18-19/force-app/main/default/objects/Campaign/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <label>From Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>