PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Not_Live__c.field-meta.xml
<CustomField>
    <fullName>Not_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Live</label>
    <type>Checkbox</type>
</CustomField>