PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Similar to the opportunity custom Private checkbox. This will hidden from the users &amp; populated by a trigger. If a campaign is Private then the Bid and Campaign Members are also private.</description>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>