PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <description>BF-23: Campaign Record Type Dev Name</description>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>