PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Report_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Report_Link_2__c</fullName>
    <formula>HYPERLINK( 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0b000004Rqu7/view?fv0=&quot;, 
&quot;/00O0b000004Rqu7?pv0=&quot;) 
&amp;Name, 
&quot;All Campaign Members Export&quot;, 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Link-2</label>
    <type>Text</type>
</CustomField>