PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Specific</fullName>
            </value>
            <value>
                <fullName>Sleeve</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>