PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Sleeve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sleeve</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fund_Vehicle__c.Investment_Vehicle__c</field>
            <operation>equals</operation>
            <valueField>$Source.Investment_Vehicle__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fund_Vehicle__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>