PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Total_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendance__c</fullName>
    <description>Roll-Up Summary (COUNT Campaign Member) if Attended is in the Status</description>
    <inlineHelpText>Roll-Up Summary (COUNT Campaign Member) if Attended is in the Status</inlineHelpText>
    <label>Total Attendance</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>contains</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>