PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Total_CIM_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_CIM_Sent__c</fullName>
    <label>Total CIM Sent</label>
    <summaryFilterItems>
        <field>CampaignMember.Date_CIM_Sent__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>