PROD-12-18-19/force-app/main/default/objects/Campaign/fields/Total_Declines__c.field-meta.xml
<CustomField>
    <fullName>Total_Declines__c</fullName>
    <description>to count the total number of members with the status = declined
To adjust this formula to include the additional values. After the formula was updated, select &quot;Force a mass recalculation of the field&quot; all of the fields updated automatically and the field changed back to &quot;Automatic calculation&quot;</description>
    <inlineHelpText>Automatically counts the total number of members with the status = declined</inlineHelpText>
    <label>Total Declines</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>