PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/Alternative_Funds.recordType-meta.xml
<RecordType>
    <fullName>Alternative_Funds</fullName>
    <active>true</active>
    <description>Alternative funds group</description>
    <label>Alternative Funds</label>
</RecordType>