PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/BFIN.recordType-meta.xml
<RecordType>
    <fullName>BFIN</fullName>
    <active>true</active>
    <description>BFIN Campaigns used for Deal Listings and Marketing</description>
    <label>BFIN</label>
</RecordType>