PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/BFIN_Traditional.recordType-meta.xml
<RecordType>
    <fullName>BFIN_Traditional</fullName>
    <active>true</active>
    <description>Campaigns used in the traditional format, with potential Opportunities originating from Campaign</description>
    <label>BFIN_Traditional</label>
</RecordType>