PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/BLP.recordType-meta.xml
<RecordType>
    <fullName>BLP</fullName>
    <active>true</active>
    <label>BLP</label>
</RecordType>