PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/Brookfield_Diligence_Portal.recordType-meta.xml
<RecordType>
    <fullName>Brookfield_Diligence_Portal</fullName>
    <active>true</active>
    <label>Brookfield Diligence Portal</label>
</RecordType>