PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/BRP_Lobbying_Initiatives.recordType-meta.xml
<RecordType>
    <fullName>BRP_Lobbying_Initiatives</fullName>
    <active>true</active>
    <description>To track the lobbying effort for BRP</description>
    <label>BRP Lobbying Initiatives</label>
</RecordType>