PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/PFG.recordType-meta.xml
<RecordType>
    <fullName>PFG</fullName>
    <active>true</active>
    <description>PFG &amp; BIM Default Campaign Record Type</description>
    <label>PFG</label>
</RecordType>