PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/PFG_Annual_Investor_Conference.recordType-meta.xml
<RecordType>
    <fullName>PFG_Annual_Investor_Conference</fullName>
    <active>true</active>
    <description>For Brookfield Private Funds Investor Annual Conference (BPFAIC)</description>
    <label>PFG Annual Investor Conference (BPFAIC)</label>
</RecordType>