PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/PSG.recordType-meta.xml
<RecordType>
    <fullName>PSG</fullName>
    <active>true</active>
    <label>PSG</label>
</RecordType>