PROD-12-18-19/force-app/main/default/objects/Campaign/recordTypes/Test.recordType-meta.xml
<RecordType>
    <fullName>Test</fullName>
    <active>true</active>
    <label>Test</label>
</RecordType>