PROD-12-18-19/force-app/main/default/objects/Campaign/validationRules/Restrict_Fields_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Fields_Update</fullName>
    <active>true</active>
    <description>This Validation prevent users from changing Room type, Account and Type after insert</description>
    <errorConditionFormula>OR(AND(
   ISCHANGED( Room_Type__c ),
   NOT ISBLANK(PRIORVALUE(Room_Type__c))),AND(
   ISCHANGED(  Account__c ),
   NOT ISBLANK(PRIORVALUE(Account__c ))),AND(
   ISCHANGED(  Type ),
   NOT ISBLANK(PRIORVALUE( Type ))))</errorConditionFormula>
    <errorMessage>Can not change Room Type or Account or Type of a Campaign once created</errorMessage>
</ValidationRule>