PROD-12-18-19/force-app/main/default/objects/Campaign/validationRules/Validation_on_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Room_Type__c ,&quot;Prospect Specific&quot;),ISBLANK (Account__c ))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>You must choose a specific Investor to create an Prospect Specific room.</errorMessage>
</ValidationRule>