PROD-12-18-19/force-app/main/default/objects/Campaign/validationRules/Validation_on_Sleeve.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Sleeve</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Room_Type__c ,&quot;Sleeve&quot;),ISBLANK ( Sleeve__c  ))</errorConditionFormula>
    <errorDisplayField>Sleeve__c</errorDisplayField>
    <errorMessage>You must choose a specific Sleeve to create a Sleeve Specific room.</errorMessage>
</ValidationRule>