PROD-12-18-19/force-app/main/default/objects/Campaign/listViews/All_Brookfield_Dilligence_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Brookfield_Dilligence_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Brookfield_Diligence_Portal</value>
    </filters>
    <label>All Brookfield Dilligence Campaigns</label>
</ListView>