PROD-12-18-19/force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Deal_Type__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>Deal_Team__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.PFG</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>