PROD-12-18-19/force-app/main/default/objects/Campaign/listViews/PSG_Lists.listView-meta.xml
<ListView>
    <fullName>PSG_Lists</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>Total_Declines__c</columns>
    <columns>Total_Accepted__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>BIM</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>PSG</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.PSG</value>
    </filters>
    <label>PSG Lists</label>
</ListView>